--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,20 @@
 {
   "manifest_version": 3,
   "name": "Chess.com to Lichess Analysis",
-  "version": "2.4",
+  "version": "2.5",
   "description": "Adds a Lichess Analysis button to Chess.com and supports PGN export.",
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage"  
   ],
   "host_permissions": [
     "https://www.chess.com/*",
     "https://lichess.org/*"
   ],
   "action": {
-    "default_title": "Analyze on Lichess"
+    "default_popup": "src/popup/popup.html",
+    "default_title": "Chess2Lichess"
   },
   "background": {
     "scripts": [
@@ -27,6 +29,7 @@
       "js": [
         "src/utils/chess-parser.js", 
         "src/ui/button-manager.js", 
+        "src/content/elo-hider.js",
         "src/content/main.js"
       ],
       "run_at": "document_idle"
@@ -41,10 +44,7 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "chess2lichess@example.com",
-      "strict_min_version": "109.0",
-      "data_collection_permissions": {
-        "required": ["none"]
-      }
+      "strict_min_version": "109.0"
     }
   }
 }
